--- a/Level1/Unit2/teacher/index.html
+++ b/Level1/Unit2/teacher/index.html
@@ -11,7 +11,7 @@
             background-image: url('../../../imagens/fundo.png');
             background-repeat: repeat;
             background-size: auto;
-            background-color: #f4f4f9; /* Cor de segurança caso a imagem não carregue */
+            background-color: #f4f4f9; /* Safe background color in case the image fails */
             color: #333;
             margin: 0;
             padding: 0;
@@ -65,22 +65,23 @@
             margin: 0 auto;
         }
 
+        /* Transparent containers for the activity buttons */
         .activities a {
             display: flex;
             align-items: center;
             justify-content: center;
-            background-color: white;
+            background-color: transparent; /* no background */
             padding: 10px;
-            border-radius: 10px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
+            border-radius: 0;
+            box-shadow: none;
+            transition: transform 0.3s ease;
             overflow: hidden;
             height: 160px;
         }
 
         .activities a:hover {
             transform: translateY(-5px);
-            box-shadow: 0 6px 10px rgba(0, 0, 0, 0.15);
+            /* remove box-shadow for total transparency */
         }
 
         .activities img {
@@ -100,20 +101,20 @@
             }
         }
 
-        /* Contêineres de conteúdo transparentes */
+        /* Transparent content containers */
         .content {
             max-width: 800px;
             margin: 40px auto;
-            /* Para evitar que o botão de fechar se sobreponha ao texto, aumentamos o padding-top */
+            /* Added extra top padding to avoid overlap with the close button */
             padding: 40px 20px 20px;
-            background-color: transparent; /* contêiner invisível */
+            background-color: transparent; 
             border: none;
             box-shadow: none;
             position: relative;
-            display: none; /* oculto inicialmente */
+            display: none; /* hidden by default */
         }
 
-        /* Botão de fechar mais harmonioso */
+        /* Close button */
         .close-btn {
             position: absolute;
             top: 10px;
@@ -133,7 +134,7 @@
             background-color: #e0553c;
         }
 
-        /* Classe base para formatação de texto */
+        /* Base class for formatted text */
         .formatted-text {
             line-height: 1.7;
             font-size: 1rem;
@@ -177,7 +178,7 @@
             margin-bottom: 1em;
         }
 
-        /* Ajuste para dispositivos menores */
+        /* Responsive adjustments */
         @media (max-width: 800px) {
             .content {
                 padding: 50px 15px 15px;
@@ -197,7 +198,7 @@
             }
         }
 
-        /* Estilos para modal das imagens ampliadas */
+        /* Styles for the image modal */
         .modal-overlay {
             position: fixed;
             top: 0;
@@ -237,50 +238,46 @@
 <body>
     <h1>Teacher Resources</h1>
     
-    <!-- Botões no topo da página (REMOVIDO "Lesson Plan" conforme solicitado) -->
+    <!-- Top buttons (we removed "Lesson Plan" as requested before) -->
     <div class="buttons">
         <button onclick="goBackToLevel()">Back</button>
     </div>
 
-    <!-- 1) NOVO subtítulo "Teachers Guide" -->
+    <!-- Teachers Guide -->
     <h2>Teachers Guide</h2>
     <div class="activities">
-        <!-- Botão "How It Works" -->
         <a href="javascript:void(0);" onclick="showTeachersGuideContent('how_it_works.txt')">
             <img src="../../../imagens/botoes/howitworks_button.png" alt="How It Works">
         </a>
-        <!-- Botão "Lesson Plan" -->
         <a href="javascript:void(0);" onclick="showTeachersGuideContent('lesson_plan.txt')">
             <img src="../../../imagens/botoes/lessonplan_button.png" alt="Lesson Plan">
         </a>
     </div>
 
-    <!-- Contêiner de texto para Teachers Guide -->
+    <!-- Teachers Guide container -->
     <div class="content" id="teachersGuideContainer">
         <button class="close-btn" onclick="closeTeachersGuide()">X</button>
         <div id="teachersGuideContent" class="formatted-text"></div>
     </div>
 
-    <!-- 2) Novo subtítulo "Creative Unit Activity" -->
+    <!-- Creative Unit Activity -->
     <h2>Creative Unit Activity</h2>
     <div class="activities">
-        <!-- Botão "atividadecriativa_button.png" -->
         <a href="javascript:void(0);" onclick="showCreativeActivityContent('atividade_criativa.txt')">
-            <img src="../../../imagens/botoes/atividadecriativa_button.png" alt="Atividade Criativa">
+            <img src="../../../imagens/botoes/atividadecriativa_button.png" alt="Creative Activity">
         </a>
-        <!-- Botão "documentos.png" (mostra miniaturas de imagens) -->
         <a href="javascript:void(0);" onclick="showDocuments()">
-            <img src="../../../imagens/botoes/documentos.png" alt="Documentos">
+            <img src="../../../imagens/botoes/documentos.png" alt="Documents">
         </a>
     </div>
 
-    <!-- Contêiner de texto para Creative Activity -->
+    <!-- Creative Activity container -->
     <div class="content" id="creativeActivityContainer">
         <button class="close-btn" onclick="closeCreativeActivity()">X</button>
         <div id="creativeActivityContent" class="formatted-text"></div>
     </div>
 
-    <!-- Subtítulo original "Choose an Activity" (mantido) -->
+    <!-- Choose an Activity -->
     <h2>Choose an Activity</h2>
     <div class="activities">
         <a href="Fine Motor Skills/index.html"><img src="../../../imagens/botoes/Fine_Motor_Skills_Button.png" alt="Fine Motor Skills"></a>
@@ -291,33 +288,33 @@
 
     <script>
         /**
-         * Retorna ao nível anterior
+         * Go back to the previous level
          */
         function goBackToLevel() {
             const currentUrl = window.location.href;
-            // Remove "/teacher/index.html" e volta para "/index.html"
+            // Removes "/teacher/index.html" and redirects to "/index.html"
             const newUrl = currentUrl.replace("/teacher/index.html", "/index.html");
             window.location.href = newUrl;
         }
 
         /**
-         * Realiza a conversão simples de um texto cru em HTML formatado.
-         * - ### Título => <h3>
-         * - --- => <hr>
-         * - **negrito** => <strong>
-         * - - item => <li> (em um <ul>)
-         * - Linhas vazias => <br>
-         * - Senão => <p> (cada linha)
+         * Converts plain text to basic HTML formatting:
+         * - Lines starting with ### => <h3>
+         * - Lines with '---' => <hr>
+         * - **bold** => <strong>
+         * - lines starting with '- ' => <li> inside a <ul>
+         * - blank lines => <br>
+         * - otherwise => <p> line
          */
         function parsePlainTextToHtml(text) {
             const lines = text.split('\n');
             let html = '';
-            let inUl = false; // controla se estamos dentro de uma lista não ordenada
+            let inUl = false;
 
             for (let line of lines) {
                 let trimmed = line.trim();
 
-                // Linha com três travessões => <hr>
+                // If line is '---'
                 if (trimmed === '---') {
                     if (inUl) {
                         html += '</ul>';
@@ -327,7 +324,7 @@
                     continue;
                 }
 
-                // Se começa com ### => <h3>
+                // If line starts with ### => <h3>
                 if (trimmed.startsWith('###')) {
                     if (inUl) {
                         html += '</ul>';
@@ -339,29 +336,26 @@
                     continue;
                 }
 
-                // Se a linha começa com '- ' => item de lista
+                // If line starts with '- ' => list item
                 if (trimmed.startsWith('- ')) {
-                    // se não estivermos em <ul>, abre
                     if (!inUl) {
                         html += '<ul>';
                         inUl = true;
                     }
-                    // remove '- '
                     let content = trimmed.replace(/^- /, '');
                     content = applyBold(content);
                     html += `<li>${content}</li>`;
                     continue;
                 }
 
-                // Se não for nenhuma das condições acima => trata como <p> normal
-                // Se já estávamos em <ul>, encerra antes
+                // If none of the above conditions => treat as a paragraph
                 if (inUl) {
                     html += '</ul>';
                     inUl = false;
                 }
 
                 if (trimmed.length === 0) {
-                    // linha em branco => quebra de linha
+                    // blank line => <br>
                     html += '<br>';
                 } else {
                     let content = applyBold(line);
@@ -369,7 +363,7 @@
                 }
             }
 
-            // fecha lista se ficou aberta no final
+            // close any open <ul>
             if (inUl) {
                 html += '</ul>';
             }
@@ -378,15 +372,14 @@
         }
 
         /**
-         * Converte trechos **texto** em <strong>texto</strong>
+         * Converts **text** into <strong>text</strong>
          */
         function applyBold(str) {
-            // **texto** => <strong>texto</strong>
             return str.replace(/\*\*(.*?)\*\*/g, '<strong>$1</strong>');
         }
 
         /**
-         * Exibe conteúdo no contêiner de Teachers Guide
+         * Show text file content in the Teachers Guide container
          */
         function showTeachersGuideContent(fileName) {
             closeCreativeActivity();
@@ -395,20 +388,19 @@
             .then(data => {
                 const container = document.getElementById('teachersGuideContainer');
                 const contentDiv = document.getElementById('teachersGuideContent');
-                // Faz parsing do texto para HTML
                 const formatted = parsePlainTextToHtml(data);
                 contentDiv.innerHTML = formatted;
                 container.style.display = 'block';
-                // Rola a página até o contêiner
+                // Smooth scroll to container
                 container.scrollIntoView({ behavior: 'smooth' });
             })
             .catch(error => {
-                console.error('Erro ao carregar o arquivo de texto:', error);
+                console.error('Error loading text file:', error);
             });
         }
 
         /**
-         * Fecha o contêiner de Teachers Guide
+         * Close the Teachers Guide container
          */
         function closeTeachersGuide() {
             const container = document.getElementById('teachersGuideContainer');
@@ -418,7 +410,7 @@
         }
 
         /**
-         * Exibe conteúdo no contêiner de Creative Activity
+         * Show text file content in the Creative Activity container
          */
         function showCreativeActivityContent(fileName) {
             closeTeachersGuide();
@@ -430,16 +422,15 @@
                 const formatted = parsePlainTextToHtml(data);
                 contentDiv.innerHTML = formatted;
                 container.style.display = 'block';
-                // Rola a página até o contêiner
                 container.scrollIntoView({ behavior: 'smooth' });
             })
             .catch(error => {
-                console.error('Erro ao carregar o arquivo de texto:', error);
+                console.error('Error loading text file:', error);
             });
         }
 
         /**
-         * Fecha o contêiner de Creative Activity
+         * Close the Creative Activity container
          */
         function closeCreativeActivity() {
             const container = document.getElementById('creativeActivityContainer');
@@ -449,16 +440,14 @@
         }
 
         /**
-         * Mostra miniaturas das imagens (documentos) dentro do contêiner de Creative Activity
+         * Show image thumbnails (documents) in the Creative Activity container
          */
         function showDocuments() {
             closeTeachersGuide();
-            // Carrega miniaturas dentro do contêiner #creativeActivityContainer
             const container = document.getElementById('creativeActivityContainer');
             const contentDiv = document.getElementById('creativeActivityContent');
 
-            // Exemplo de lista de arquivos de imagens
-            // Ajuste conforme o que você tiver na pasta
+            // Example list of image files
             const imageFiles = [
                 'imagem1.png',
                 'imagem2.png',
@@ -468,8 +457,8 @@
                 'imagem6.png'
             ];
 
-            let html = `<h3>Documentos</h3>`;
-            html += `<p>Clique em uma miniatura para ampliar:</p>`;
+            let html = `<h3>Documents</h3>`;
+            html += `<p>Click on a thumbnail to enlarge:</p>`;
             html += `<div style="display: flex; flex-wrap: wrap;">`;
 
             imageFiles.forEach(file => {
@@ -493,23 +482,22 @@
         }
 
         /**
-         * Abre modal para exibir imagem ampliada
+         * Open modal to show an enlarged image
          */
         function openImageModal(imgSrc) {
-            // Cria overlay
             const overlay = document.createElement('div');
             overlay.className = 'modal-overlay';
             overlay.innerHTML = `
                 <div class="modal-content">
                     <button class="modal-close-btn" onclick="closeModal()">Close</button>
-                    <img src="${imgSrc}" alt="Ampliado">
+                    <img src="${imgSrc}" alt="Enlarged">
                 </div>
             `;
             document.body.appendChild(overlay);
         }
 
         /**
-         * Fecha o modal de imagens
+         * Close the image modal
          */
         function closeModal() {
             const overlay = document.querySelector('.modal-overlay');
