--- a/Level1/Unit2/teacher/index.html
+++ b/Level1/Unit2/teacher/index.html
@@ -56,32 +56,32 @@
             box-shadow: 0 6px 8px rgba(0, 0, 0, 0.15);
         }
 
+        /* Activities section now uses flexbox to reduce horizontal spacing and center items */
         .activities {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-            gap: 15px;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 10px; /* smaller horizontal gap */
             padding: 20px;
             max-width: 1200px;
             margin: 0 auto;
         }
 
-        /* Transparent containers for the activity buttons */
+        /* Transparent container for activity buttons */
         .activities a {
             display: flex;
             align-items: center;
             justify-content: center;
             background-color: transparent; /* no background */
-            padding: 10px;
-            border-radius: 0;
-            box-shadow: none;
+            width: 150px; /* fix a width to keep them consistent in a row */
+            height: 160px;
             transition: transform 0.3s ease;
             overflow: hidden;
-            height: 160px;
         }
 
         .activities a:hover {
             transform: translateY(-5px);
-            /* remove box-shadow for total transparency */
+            /* remove box-shadow for full transparency */
         }
 
         .activities img {
@@ -90,14 +90,20 @@
             object-fit: contain;
         }
 
+        /* On very small screens, we allow wrapping naturally; spacing should be fine. */
         @media (max-width: 600px) {
-            .activities img {
-                width: 100%;
-                max-height: 120px;
+            .activities {
+                justify-content: center;
             }
 
             .activities a {
+                width: 120px;
                 height: 140px;
+            }
+
+            .activities img {
+                width: 100%;
+                max-height: 120px;
             }
         }
 
@@ -134,10 +140,11 @@
             background-color: #e0553c;
         }
 
-        /* Base class for formatted text */
+        /* Base class for formatted text, now all bold and slightly larger */
         .formatted-text {
-            line-height: 1.7;
-            font-size: 1rem;
+            line-height: 1.6;
+            font-size: 1.1rem; /* slightly bigger font */
+            font-weight: bold; /* ALL text in bold */
             color: #444;
         }
 
@@ -148,7 +155,7 @@
         }
 
         .formatted-text strong {
-            color: #4CAF50;
+            color: #4CAF50; /* highlight for double-bold is not very visible but kept for color difference */
         }
 
         .formatted-text em {
@@ -238,7 +245,7 @@
 <body>
     <h1>Teacher Resources</h1>
     
-    <!-- Top buttons (we removed "Lesson Plan" as requested before) -->
+    <!-- Top buttons (removed "Lesson Plan" as requested before) -->
     <div class="buttons">
         <button onclick="goBackToLevel()">Back</button>
     </div>
@@ -298,7 +305,7 @@
         }
 
         /**
-         * Converts plain text to basic HTML formatting:
+         * Convert plain text to basic HTML formatting:
          * - Lines starting with ### => <h3>
          * - Lines with '---' => <hr>
          * - **bold** => <strong>
@@ -348,7 +355,7 @@
                     continue;
                 }
 
-                // If none of the above conditions => treat as a paragraph
+                // If none of the above => treat as a paragraph
                 if (inUl) {
                     html += '</ul>';
                     inUl = false;
@@ -372,7 +379,7 @@
         }
 
         /**
-         * Converts **text** into <strong>text</strong>
+         * Convert **text** into <strong>text</strong>
          */
         function applyBold(str) {
             return str.replace(/\*\*(.*?)\*\*/g, '<strong>$1</strong>');
@@ -451,10 +458,7 @@
             const imageFiles = [
                 'imagem1.png',
                 'imagem2.png',
-                'imagem3.png',
-                'imagem4.png',
-                'imagem5.png',
-                'imagem6.png'
+                'imagem3.png'
             ];
 
             let html = `<h3>Documents</h3>`;
