--- a/Atividades/QUIZ_IMAGE/index.html
+++ b/Atividades/QUIZ_IMAGE/index.html
@@ -157,6 +157,7 @@
 
 <h1>Hannah Quiz</h1>
 
+<!-- Observação: Mantemos a gif-container aqui no HTML, mas faremos ela ser reposicionada via JavaScript para ficar entre o texto da pergunta e a imagem. -->
 <div class="gif-container">
     <img id="feedback-img" src="" alt="Feedback GIF"/>
 </div>
@@ -282,7 +283,7 @@
             // Cria um array de boolean para marcar se cada questão foi respondida corretamente
             answeredQuestions = new Array(questions.length).fill(false);
 
-            // ADIÇÃO: Define a propriedade imagePath para cada questão
+            // Define a propriedade imagePath para cada questão
             // Assumindo que os arquivos de imagem estão em: ../../${level}/${unit}/DataQuiz/imagens/imagem1.png, imagem2.png, etc.
             for (let i = 0; i < questions.length; i++) {
                 questions[i].imagePath = `../../${level}/${unit}/DataQuiz/imagens/imagem${i + 1}.png`;
@@ -302,29 +303,29 @@
         container.innerHTML = '';
 
         const q = questions[currentQuestionIndex];
-        const questionDiv = document.createElement('div');
-        questionDiv.classList.add('question');
-
-        // ADIÇÃO: Cria um elemento de imagem antes do texto da pergunta
-        const questionImage = document.createElement('img');
-        questionImage.src = q.imagePath;
-        questionImage.alt = `Imagem da pergunta ${currentQuestionIndex + 1}`;
-        questionDiv.appendChild(questionImage);
-
-        // Texto da pergunta
+        
+        // Cria o texto da pergunta
         const questionText = document.createElement('p');
         questionText.id = 'question-text';
         questionText.innerText = `${currentQuestionIndex + 1}. ${q.question}`;
-        questionDiv.appendChild(questionText);
+        container.appendChild(questionText);
 
-        // Opções de resposta
+        // Reposiciona o gif-container para que fique logo após o texto da pergunta (e antes da imagem)
+        const gifContainerElement = document.querySelector('.gif-container');
+        container.appendChild(gifContainerElement);
+
+        // Cria a imagem da pergunta
+        const questionImage = document.createElement('img');
+        questionImage.src = q.imagePath;
+        questionImage.alt = `Imagem da pergunta ${currentQuestionIndex + 1}`;
+        container.appendChild(questionImage);
+
+        // Cria as opções de resposta
         q.answers.forEach((answer) => {
             const answerLabel = document.createElement('label');
             answerLabel.innerHTML = `<input type="radio" name="question${currentQuestionIndex}" value="${answer[0]}" onclick="checkAnswer(this, '${answer[0]}')"> ${answer}`;
-            questionDiv.appendChild(answerLabel);
+            container.appendChild(answerLabel);
         });
-
-        container.appendChild(questionDiv);
 
         // Restaura a resposta do usuário, se houver
         if (userAnswers[currentQuestionIndex]) {
