--- a/Atividades/QUIZ_IMAGE/index.html
+++ b/Atividades/QUIZ_IMAGE/index.html
@@ -157,7 +157,7 @@
 
 <h1>Hannah Quiz</h1>
 
-<!-- Observação: Mantemos a gif-container aqui no HTML, mas faremos ela ser reposicionada via JavaScript para ficar entre o texto da pergunta e a imagem. -->
+<!-- Importante: Mantemos a gif-container aqui, mas a real posição na tela será definida pela ordem de inserção no JS -->
 <div class="gif-container">
     <img id="feedback-img" src="" alt="Feedback GIF"/>
 </div>
@@ -303,24 +303,24 @@
         container.innerHTML = '';
 
         const q = questions[currentQuestionIndex];
-        
-        // Cria o texto da pergunta
-        const questionText = document.createElement('p');
-        questionText.id = 'question-text';
-        questionText.innerText = `${currentQuestionIndex + 1}. ${q.question}`;
-        container.appendChild(questionText);
 
-        // Reposiciona o gif-container para que fique logo após o texto da pergunta (e antes da imagem)
-        const gifContainerElement = document.querySelector('.gif-container');
-        container.appendChild(gifContainerElement);
-
-        // Cria a imagem da pergunta
+        // 1. IMAGEM
         const questionImage = document.createElement('img');
         questionImage.src = q.imagePath;
         questionImage.alt = `Imagem da pergunta ${currentQuestionIndex + 1}`;
         container.appendChild(questionImage);
 
-        // Cria as opções de resposta
+        // 2. GIF CONTAINER (reposicionamos ele logo após a imagem)
+        const gifContainerElement = document.querySelector('.gif-container');
+        container.appendChild(gifContainerElement);
+
+        // 3. TEXTO DA PERGUNTA
+        const questionText = document.createElement('p');
+        questionText.id = 'question-text';
+        questionText.innerText = `${currentQuestionIndex + 1}. ${q.question}`;
+        container.appendChild(questionText);
+
+        // Opções de resposta
         q.answers.forEach((answer) => {
             const answerLabel = document.createElement('label');
             answerLabel.innerHTML = `<input type="radio" name="question${currentQuestionIndex}" value="${answer[0]}" onclick="checkAnswer(this, '${answer[0]}')"> ${answer}`;
