--- a/Atividades/QUIZ_IMAGE/index.html
+++ b/Atividades/QUIZ_IMAGE/index.html
@@ -157,7 +157,7 @@
 
 <h1>Hannah Quiz</h1>
 
-<!-- Importante: Mantemos a gif-container aqui, mas a real posição na tela será definida pela ordem de inserção no JS -->
+<!-- gif-container permanece no HTML para manter a estrutura original -->
 <div class="gif-container">
     <img id="feedback-img" src="" alt="Feedback GIF"/>
 </div>
@@ -238,10 +238,7 @@
     async function loadQuestions() {
         // Obtém os parâmetros level e unit da URL
         const { level, unit } = getLevelAndUnitFromURL();
-
-        // Adicione os logs para verificar level e unit
-        console.log("Level:", level);
-        console.log("Unit:", unit);
+        console.log("Level:", level, "Unit:", unit);
 
         if (!level || !unit) {
             console.error("Level or Unit not identified in the URL.");
@@ -250,14 +247,12 @@
 
         // Gera o caminho dinâmico baseado no level e unit
         const questionsPath = `../../${level}/${unit}/DataQuiz/questions.txt`;
-
-        // Adicione o log para verificar o caminho gerado
         console.log("Generated Path:", questionsPath);
 
         try {
             const response = await fetch(questionsPath);
             if (!response.ok) throw new Error(`Failed to fetch questions from ${questionsPath}`);
-            
+
             const text = await response.text();
             const lines = text.split('\n');
             let currentQuestion = null;
@@ -265,44 +260,66 @@
             lines.forEach(line => {
                 line = line.trim();
                 if (line.startsWith('Q:')) {
+                    // Se já existia uma questão sendo montada, finaliza ela antes de começar a próxima
                     if (currentQuestion) {
                         questions.push(currentQuestion);
                     }
                     currentQuestion = { question: line.substring(2).trim(), answers: [], correct: '' };
                 } else if (/^[A-Z]\./.test(line)) {
-                    currentQuestion.answers.push(line);
+                    // Linhas do tipo A., B. etc.
+                    if (currentQuestion) {
+                        currentQuestion.answers.push(line);
+                    }
                 } else if (line.startsWith('Correct:')) {
-                    currentQuestion.correct = line.split(':')[1].trim();
+                    if (currentQuestion) {
+                        currentQuestion.correct = line.split(':')[1].trim();
+                    }
                 }
             });
 
+            // Finaliza a última questão se ela existir
             if (currentQuestion) {
                 questions.push(currentQuestion);
+            }
+
+            // Se não encontrou nenhuma pergunta, emite um log de alerta
+            if (questions.length === 0) {
+                console.warn("No questions found in the file.");
             }
 
             // Cria um array de boolean para marcar se cada questão foi respondida corretamente
             answeredQuestions = new Array(questions.length).fill(false);
 
-            // Define a propriedade imagePath para cada questão
-            // Assumindo que os arquivos de imagem estão em: ../../${level}/${unit}/DataQuiz/imagens/imagem1.png, imagem2.png, etc.
+            // Associa um imagePath a cada questão: imagem1.png, imagem2.png ...
             for (let i = 0; i < questions.length; i++) {
                 questions[i].imagePath = `../../${level}/${unit}/DataQuiz/imagens/imagem${i + 1}.png`;
             }
 
-            displayQuestion();
-
-            // Log para verificar as perguntas carregadas
             console.log("Loaded Questions:", questions);
+
+            displayQuestion();
         } catch (error) {
             console.error("Error loading questions:", error);
         }
     }
 
     function displayQuestion() {
+        // Se o índice estiver fora dos limites, não faz nada
+        if (currentQuestionIndex < 0 || currentQuestionIndex >= questions.length) {
+            console.error("Invalid currentQuestionIndex:", currentQuestionIndex);
+            return;
+        }
+
         const container = document.getElementById('quiz-container');
         container.innerHTML = '';
 
         const q = questions[currentQuestionIndex];
+        if (!q) {
+            console.error("No question data found for index:", currentQuestionIndex);
+            return;
+        }
+
+        console.log("Displaying question index:", currentQuestionIndex, q);
 
         // 1. IMAGEM
         const questionImage = document.createElement('img');
@@ -310,8 +327,9 @@
         questionImage.alt = `Imagem da pergunta ${currentQuestionIndex + 1}`;
         container.appendChild(questionImage);
 
-        // 2. GIF CONTAINER (reposicionamos ele logo após a imagem)
+        // 2. GIF CONTAINER (recolocado logo após a imagem; inicia oculto por precaução)
         const gifContainerElement = document.querySelector('.gif-container');
+        gifContainerElement.style.display = 'none'; // Garante que inicie escondido
         container.appendChild(gifContainerElement);
 
         // 3. TEXTO DA PERGUNTA
@@ -320,9 +338,10 @@
         questionText.innerText = `${currentQuestionIndex + 1}. ${q.question}`;
         container.appendChild(questionText);
 
-        // Opções de resposta
+        // 4. OPÇÕES DE RESPOSTA
         q.answers.forEach((answer) => {
             const answerLabel = document.createElement('label');
+            // Ex: value = "A" se for "A. ..." -> answer[0]
             answerLabel.innerHTML = `<input type="radio" name="question${currentQuestionIndex}" value="${answer[0]}" onclick="checkAnswer(this, '${answer[0]}')"> ${answer}`;
             container.appendChild(answerLabel);
         });
@@ -342,13 +361,15 @@
     }
 
     function updateNavigationButtons() {
-        document.getElementById('prev-btn').disabled = currentQuestionIndex === 0;
-        document.getElementById('next-btn').disabled = currentQuestionIndex === questions.length - 1;
+        // Desabilita "Previous" caso estejamos na primeira pergunta
+        document.getElementById('prev-btn').disabled = (currentQuestionIndex === 0);
+        // Desabilita "Next" caso estejamos na última pergunta
+        document.getElementById('next-btn').disabled = (currentQuestionIndex === questions.length - 1);
     }
 
     function showNextQuestion() {
-        hideGIF();
         console.log("Before Next Question:", currentQuestionIndex);
+        hideGIF();
         if (currentQuestionIndex < questions.length - 1) {
             currentQuestionIndex++;
             displayQuestion();
@@ -356,8 +377,8 @@
     }
 
     function showPreviousQuestion() {
-        hideGIF();
         console.log("Before Previous Question:", currentQuestionIndex);
+        hideGIF();
         if (currentQuestionIndex > 0) {
             currentQuestionIndex--;
             displayQuestion();
@@ -375,6 +396,11 @@
 
     function checkAnswer(radioElement, selectedAnswer) {
         const q = questions[currentQuestionIndex];
+        if (!q) {
+            console.error("No question data at checkAnswer. Index:", currentQuestionIndex);
+            return;
+        }
+
         const feedbackDiv = document.getElementById('feedback');
         const feedbackImg = document.getElementById('feedback-img');
         const feedbackAudio = document.getElementById('feedback-audio');
@@ -383,35 +409,36 @@
         // Salva a resposta do usuário
         userAnswers[currentQuestionIndex] = selectedAnswer;
 
-        toggleButtons(false); // Bloqueia os botões
+        // Bloqueia os botões temporariamente
+        toggleButtons(false);
 
+        // Verifica resposta
         if (selectedAnswer === q.correct) {
             feedbackImg.src = 'certo.gif';
             feedbackAudio.src = 'certo.mp3';
-            feedbackAudio.play();
-            feedbackDiv.style.display = 'block';
-            gifContainer.style.display = 'block';
             answeredQuestions[currentQuestionIndex] = true;
-
-            setTimeout(() => {
-                hideGIF();
-                toggleButtons(true); // Desbloqueia os botões
-                showNextQuestion();
-                checkCompletion();
-            }, 2000);
         } else {
             feedbackImg.src = 'errado.gif';
             feedbackAudio.src = 'errado.mp3';
-            feedbackAudio.play();
-            feedbackDiv.style.display = 'block';
-            gifContainer.style.display = 'block';
-
-            setTimeout(() => {
-                hideGIF();
-                toggleButtons(true); // Desbloqueia os botões
-                radioElement.checked = false;
-            }, 2000);
         }
+
+        feedbackAudio.play();
+        feedbackDiv.style.display = 'block';
+        gifContainer.style.display = 'block';
+
+        setTimeout(() => {
+            hideGIF();
+            toggleButtons(true);
+
+            // Se estiver certa, avança para a próxima e verifica se concluiu
+            if (selectedAnswer === q.correct) {
+                showNextQuestion();
+                checkCompletion();
+            } else {
+                // Se estiver errada, desmarca a opção
+                radioElement.checked = false;
+            }
+        }, 2000);
     }
 
     function hideGIF() {
@@ -420,6 +447,7 @@
     }
 
     function checkCompletion() {
+        // Se todas as questões estiverem respondidas corretamente
         if (answeredQuestions.every((answered) => answered)) {
             showModal();
             ensureUserIsAuthenticated(updateNextPhase);
@@ -492,17 +520,11 @@
         const params = new URLSearchParams(window.location.search);
         const level = params.get('level');
         const unit = params.get('unit');
-
-        // Adicione os logs para verificar level e unit
-        console.log("Extracted Level from URL:", level);
-        console.log("Extracted Unit from URL:", unit);
-
         return { level, unit };
     }
 
     async function handleBackButtonClick() {
         const { level, unit } = getLevelAndUnitFromURL();
-
         console.log("Checking progress for level:", level, "unit:", unit);
 
         if (!level || !unit) {
@@ -518,7 +540,6 @@
                 if (isNextPhaseUnlocked) {
                     window.history.back(); // Permite voltar normalmente
                 } else {
-                    // Exibe a mensagem se a próxima fase não estiver desbloqueada
                     const confirmExit = confirm(
                         "You have not completed this phase. Do you want to go back anyway?"
                     );
@@ -534,36 +555,37 @@
 
     async function checkPhaseProgress(uid, level, unit) {
         try {
-            // Obtem a fase atual e calcula a próxima
             const currentPhase = parseInt(getPhaseFromURL());
             const nextPhase = `fase${currentPhase + 1}`;
             console.log("Checking progress for next phase:", nextPhase);
 
-            // Referência ao banco de dados para verificar a próxima fase
             const dbRef = firebase.database().ref(`usuarios/${uid}/progresso/${level}/${unit}/${nextPhase}`);
             const snapshot = await dbRef.once("value");
-            
             const isUnlocked = snapshot.val() === true;
             console.log(`Next phase (${nextPhase}) unlocked:`, isUnlocked);
 
-            return isUnlocked; // Retorna true se a próxima fase estiver desbloqueada
+            return isUnlocked;
         } catch (error) {
             console.error("Error checking phase progress:", error);
-            return false; // Retorna false em caso de erro
+            return false;
         }
     }
 
     function readQuestion() {
         console.log("Reading question...");
-        stopReading(); // Cancela qualquer leitura anterior
-        const questionText = document.getElementById('question-text').innerText;
+        stopReading();
+        const questionText = document.getElementById('question-text');
+        if (!questionText) {
+            console.error("No question-text element found to read.");
+            return;
+        }
 
         if (!('speechSynthesis' in window)) {
             alert("Your browser does not support speech synthesis. Please enable it or use a compatible browser.");
             return;
         }
 
-        const utterance = new SpeechSynthesisUtterance(questionText);
+        const utterance = new SpeechSynthesisUtterance(questionText.innerText);
         utterance.lang = 'en-US';
         window.speechSynthesis.speak(utterance);
     }
@@ -580,9 +602,9 @@
         const doc = new jsPDF();
 
         const logo = new Image();
-        logo.src = 'Logo.png'; 
+        logo.src = 'Logo.png';
 
-        doc.addImage(logo, 'PNG', 90, 10, 30, 30); 
+        doc.addImage(logo, 'PNG', 90, 10, 30, 30);
 
         doc.setFontSize(20);
         doc.text('Hannah Quiz', 105, 50, null, null, 'center');
@@ -596,8 +618,8 @@
         questions.forEach((q, index) => {
             doc.setFontSize(14);
             let questionText = `${index + 1}. ${q.question}`;
-            let textLines = doc.splitTextToSize(questionText, 180);  
-            let questionHeight = textLines.length * 10; 
+            let textLines = doc.splitTextToSize(questionText, 180);
+            let questionHeight = textLines.length * 10;
 
             if (yPosition + questionHeight > 280) {
                 doc.addPage();
@@ -617,18 +639,17 @@
                     doc.addPage();
                     yPosition = 20;
                 }
-
                 doc.text(answerLines, 30, yPosition);
                 yPosition += answerHeight;
             });
 
-            yPosition += 10; 
+            yPosition += 10;
         });
 
         doc.save('QuizQuestionsWithLogo.pdf');
     }
 
-    // Chama a função de carregamento das perguntas quando a página é carregada
+    // Ao carregar a página, carrega as perguntas
     window.onload = loadQuestions;
 </script>
 
