--- a/Carrossel/projetos.html
+++ b/Carrossel/projetos.html
@@ -1285,7 +1285,27 @@ We are facing two major challenges:
           "imagens/his/img20.png",
           "imagens/his/img21.png",
           "imagens/his/img22.png",
-          "imagens/his/img23.png"        
+          "imagens/his/img23.png",
+          "imagens/his/img24.png",
+          "imagens/his/img25.png",
+          "imagens/his/img26.png",
+          "imagens/his/img27.png",
+          "imagens/his/img28.png",
+          "imagens/his/img29.png",
+          "imagens/his/img30.png",
+          "imagens/his/img31.png",
+          "imagens/his/img32.png",
+          "imagens/his/img33.png",
+          "imagens/his/img34.png",
+          "imagens/his/img35.png",
+          "imagens/his/img36.png",
+          "imagens/his/img37.png",
+          "imagens/his/img38.png",
+          "imagens/his/img39.png",
+          "imagens/his/img40.png",
+          "imagens/his/img41.png",
+          "imagens/his/img42.png",          
+          "imagens/his/img43.png"        
         ]
       },
       saude: {
