--- a/Carrossel/projetos.html
+++ b/Carrossel/projetos.html
@@ -1164,7 +1164,13 @@ In a second phase, we plan to make the app available in Brazil so that anyone ca
           "imagens/ingles/img3.png",
           "imagens/ingles/img4.png",
           "imagens/ingles/img5.png",
-          "imagens/ingles/img6.png"
+          "imagens/ingles/img6.png",
+          "imagens/ingles/img7.png",
+          "imagens/ingles/img8.png",
+          "imagens/ingles/img9.png",
+          "imagens/ingles/img10.png",
+          "imagens/ingles/img11.png",
+          "imagens/ingles/img12.png"
         ]
       },
       food: {
