--- a/Carrossel/projetos.html
+++ b/Carrossel/projetos.html
@@ -1216,7 +1216,14 @@ Food is essential for life, especially for those facing the horrors of war and e
           "imagens/food/img7.png",
           "imagens/food/img8.png",
           "imagens/food/img9.png",
-          "imagens/food/img10.png"
+          "imagens/food/img10.png",
+          "imagens/food/img11.png",
+          "imagens/food/img12.png",
+          "imagens/food/img13.png",
+          "imagens/food/img14.png",
+          "imagens/food/img15.png",
+          "imagens/food/img16.png",
+          "imagens/food/img17.png"
         ]
       },
       his: {
