--- a/Carrossel/projetos.html
+++ b/Carrossel/projetos.html
@@ -1375,7 +1375,20 @@ With the emergency health fund, we seek not only to save lives but also to be a 
           "imagens/saude/img10.png",
           "imagens/saude/img11.png",
           "imagens/saude/img12.png",
-          "imagens/saude/img13.png"
+          "imagens/saude/img13.png",
+          "imagens/saude/img14.png",
+          "imagens/saude/img15.png",
+          "imagens/saude/img16.png",
+          "imagens/saude/img17.png",
+          "imagens/saude/img18.png",
+          "imagens/saude/img19.png",
+          "imagens/saude/img20.png",
+          "imagens/saude/img21.png",
+          "imagens/saude/img22.png",
+          "imagens/saude/img23.png",
+          "imagens/saude/img24.png",
+          "imagens/saude/img25.png",
+          "imagens/saude/img26.png"
         ]
       },
       igreja: {
