--- a/Carrossel/projetos.html
+++ b/Carrossel/projetos.html
@@ -1043,7 +1043,14 @@ In addition to formal education, these children also attend our Learning Center 
           "imagens/bolsa/img7.png",
           "imagens/bolsa/img8.png",
           "imagens/bolsa/img9.png",
-          "imagens/bolsa/img10.png"
+          "imagens/bolsa/img10.png",
+          "imagens/bolsa/img11.png",
+          "imagens/bolsa/img12.png",
+          "imagens/bolsa/img13.png",
+          "imagens/bolsa/img14.png",
+          "imagens/bolsa/img15.png",
+          "imagens/bolsa/img16.png",
+          "imagens/bolsa/img17.png"
         ]
       },
       fazenda: {
