--- a/Carrossel/doe.html
+++ b/Carrossel/doe.html
@@ -466,6 +466,10 @@
     .lang-en {
       display: none;   /* Padrão EN oculto */
     }
+
+.carousel-item[onclick="mostrarDetalhes('campanha')"] {
+  display: none;
+}
   </style>
 </head>
 
