--- a/Carrossel/doe.html
+++ b/Carrossel/doe.html
@@ -467,6 +467,7 @@
       display: none;   /* Padrão EN oculto */
     }
 
+/* OCULTAR MOMENTANEAMENTE O BANNER DA CAMPANHA */
 .carousel-item[onclick="mostrarDetalhes('campanha')"] {
   display: none;
 }
